Fixed spacing on faqs.php

--- a/_/css/carol_style.css
+++ b/_/css/carol_style.css
@@ -98,6 +98,9 @@ a:active {
   .org-image2 {
     height: 150px;
   } 
+  .right {
+    padding-left: 10px;
+  }
 }
 
 /* when less than large size */
@@ -206,7 +209,6 @@ footer {
 .right {
   float: right;
   padding-right: 20px;
-  padding-left: 10px;
 }
 
 .org-image, .org-image2 {
